# syft-reviewer-allowlist

./: .gitignore  README.md  pyproject.toml  run.sh
backend/: __init__.py  main.py  models.py  utils.py
backend/templates/: index.html
frontend/: bun.lockb
frontend/app/: layout.tsx  page.tsx
frontend/app/jobs/: page.tsx
frontend/components/: jobs-view.tsx  layout.tsx
src/syft_reviewer_allowlist/: __init__.py  app.py
