[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syft-reviewer-allowlist"
version = "0.1.0"
description = "Auto-approve SyftBox code jobs from trusted senders"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "OpenMined", email = "info@openmined.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "syft-code-queue>=0.1.3",
    "syft-core>=0.2.5",
    "loguru>=0.7.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
syft-reviewer-allowlist = "syft_reviewer_allowlist.app:main"

[project.urls]
Homepage = "https://github.com/OpenMined/syft-reviewer-allowlist"
Repository = "https://github.com/OpenMined/syft-reviewer-allowlist.git"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"] 